// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`html-parser can retrieve body from html 1`] = `
{
  "body": "
          <div id="root"></div>
          <!--
            This HTML file is a template.
            If you open it directly in the browser, you will see an empty page.
            You can add webfonts, meta tags, or analytics to this file.
            The build step will place the bundled scripts into the <body> tag.
            To begin the development, run \`npm start\` in this folder.
            To create a production bundle, use \`npm run build\`.
          -->
        ",
  "externalResources": [],
}
`;

exports[`html-parser can retrieve css external resources 1`] = `
{
  "body": "
          <div id="root"></div>
          <!--
            This HTML file is a template.
            If you open it directly in the browser, you will see an empty page.
            You can add webfonts, meta tags, or analytics to this file.
            The build step will place the bundled scripts into the <body> tag.
            To begin the development, run \`npm start\` in this folder.
            To create a production bundle, use \`npm run build\`.
          -->
        ",
  "externalResources": [
    "https://redux-form.com/6.8.0/bundle.css",
    "//cdnjs.cloudflare.com/ajax/libs/font-awesome/4.3.0/css/font-awesome.min.css",
  ],
}
`;

exports[`html-parser can retrieve js external resources 1`] = `
{
  "body": "
          <div id="root"></div>
          <!--
            This HTML file is a template.
            If you open it directly in the browser, you will see an empty page.
            You can add webfonts, meta tags, or analytics to this file.
            The build step will place the bundled scripts into the <body> tag.
            To begin the development, run \`npm start\` in this folder.
            To create a production bundle, use \`npm run build\`.
          -->
          <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.slim.min.js"></script>
        ",
  "externalResources": [
    "https://redux-form.com/6.8.0/bundle.css",
    "//cdnjs.cloudflare.com/ajax/libs/font-awesome/4.3.0/css/font-awesome.min.css",
    "https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.slim.min.js",
  ],
}
`;
